# netlist-interpreter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  clash-yosis-netlist-sim.cabal  flake.nix  yosys-bb.cabal
.github/workflows/: haskell.yml
designs/: cache.db
exe/: Main.hs
src/: Bit.hs  Graph.hs  Intermediate.hs  Interpreter.hs  Json.hs  Memory.hs  MyLib.hs  NodeGen.hs  Util.hs  shift.json  shift.v
src/Clash/CoSim/: Yosys.hs
src/Clash/CoSim/Yosys/: Inst.hs  Internal.hs  Util.hs
src/Internal/: Intermediate.hs  Interpreter.hs  Json.hs  Memory.hs  Util.hs
src/Internal/Interpreter/: CompState.hs  Node.hs
src/Internal/Memory/: Bit.hs
src/Interp/: Control.hs  Main.hs
src/Interpreter/: CompState.hs  Node.hs
src/Memory/: Bit.hs  BitView.hs
src/MyLib/: Json.hs
test/: Main.hs  MemoryTest.hs  Test.hs  clz.control  counter.control  fibonacci.control  fibonacci.v  findIndex.control  findIndex.v  genericBitPack.control  loop2.control  loop2.v  lotsOfState.control  minimum.control  minimum.v  t1669.control  t1669.v  t2220.control
test/Clash/Explicit/Testbench/: Extra.hs
test/Test/Clash/: ExternalLoop.hs  ExternalLoop3.hs  Fibonacci.hs  LotsOfState.hs  T1669.hs  blockRam.hs  externalLoop2.hs  externalLoop3.hs  fibonacci.hs
test/Test/Unit/: Memory.hs
test/verilog/: blockRam.v  box.v  clz.v  counter.v  dual_clock.v  dual_clock_fifo.v  externalLoop.v  externalLoop2.v  externalLoop3.v  fibonacci.v  genericBitPack.v  loop.v  loop2.v  lotsOfState.v  registerAE.v  t2069.v  t2220.v
