cabal-version:   3.0
name:            clash-yosys-netlist-sim
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      pokatilov0802@gmail.com
author:          Aleksandr Pokatilov
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        -- Interp.Main
        -- Interp.Control
        Util
        Interpreter
        Clash.CoSim.Yosys
    other-modules:
        Json
        Intermediate
        Intermediate.CellKinds
        Interpreter.CompState
        Interpreter.Node
        Memory
        Memory.Bit

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.0.0,
        containers,
        aeson,
        text,
        bytestring,
        vector,
        extra,
        scientific,
        temporary,
        process,
        template-haskell,
        clash-prelude ^>=1.8.0,
        sqlite-simple,
        hashable,
        transformers

test-suite netlist-sim-unittest
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.0.0,
        tasty,
        tasty-hunit,
        clash-yosys-netlist-sim

test-suite netlist-sim-inttest
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.Extra.Solver
    default-extensions:
        DataKinds
        ViewPatterns
        TemplateHaskell
    build-depends:
        base ^>=4.19.0.0,
        tasty,
        tasty-hunit,
        clash-prelude,
        containers,
        clash-yosys-netlist-sim,
        ghc-typelits-natnormalise,
        ghc-typelits-extra,
        ghc-typelits-knownnat
